# ARLE

./: .gitignore  README.md
Allot later/: README.md  imunode.py
Allot later/MPU_calibrated_normalized_values/: MPU_calibrated_normalized_values.ino
Bot_Installation/: ARLE, 4i Lab – Just a Project Blog.html
Bot_Installation/ARLE, 4i Lab – Just a Project Blog_files/: 51S_pQePftE.html  base.js  build.min.js  css  css(1)  css(2)  index.html  master.html  remote.js  responsive-videos.css  saved_resource  saved_resource(1)  saved_resource(2)  saved_resource(3)  saved_resource(4)  saved_resource(7).html  saved_resource(8).html  saved_resource.html  www-embed-player.js
Custom ROS Packages/arle_controller/: CMakeLists.txt  package.xml
Custom ROS Packages/arle_controller/launch/: demo.launch
Custom ROS Packages/arle_controller/src/arle_controller/: diff_tf.py  laser_to_baselink.py  motor.py  twist_to_motors.py
NUC power/: README.md  Reference  WBOperatingValuesDesign19.csv
NUC_power/: README.md
RMCS2301 and RMCS2004/: README.md
RMCS2301 and RMCS2004/sketch_jan15a/: sketch_jan15a.ino
RMCS2301_RMCS2004/: README.md
RMCS2301_RMCS2004/new_driver/: README.md  motor_pwm_control.ino
RMCS2301_RMCS2004/nex_robo_driver/: trial_3.ino
Realsense/: rs_data.py  rs_data_compatible.py
Weekly Documentation/SLAM/: GMapping_improv.rst  RTAB-Map.rst  SPLAM-MM.rst  (+1 more)
localisation/: localise.py
localization/: localise.py
mechatronic_stuff/: Raspberry_L298N_Tutorial.py
rmcs_3012/: RMCS_3014.ino  quad_enc_sigle_motor.ino  serial_reader.py
simulation_models/: README.md
(+108 files in other folders)
