<?xml version="1.0"?>
<package format="2">
  <name>arle_controller</name>
  <version>0.0.0</version>
  <description>The arle_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="mrleo@todo.todo">mrleo</maintainer>
  <author>Mark Rose</author>
  <url type="website">https://github.com/merose/diff_drive</url>
  <url type="repository">https://github.com/merose/diff_drive.git</url>
  <url type="bugtracker">https://github.com/merose/diff_drive/issues</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>message_generation</exec_depend>
  
</package>
